load("@rules_cc//cc:defs.bzl", "cc_library")

_public_hdrs = [
    "include/boost/*.hpp",
    "include/boost/move/*.hpp",
    "include/boost/move/algo/*.hpp",
]

cc_library(
    name = "move_internal",
    hdrs = glob(["include/boost/**/*.hpp"], exclude = _public_hdrs),
)

cc_library(
    name = "move",
    visibility = ["//visibility:public"],
    includes = ["include"],
    hdrs = glob(_public_hdrs),
    deps = [
        ":move_internal",
        "@boost//static_assert",
        "@boost//core",
    ],
)
